service.yml
apiVersion: v1
kind: Service
metadata:
  name: contact-book-app-service
  labels:
    app: contact-book-app
spec:
  selector:
    app: contact-book-app
  ports:
    - protocol: TCP
      port: 8082 # Port eksternal yang akan diakses
      targetPort: 8080 # Port aplikasi di dalam container
  type: ClusterIP # Gunakan ClusterIP untuk akses internal dalam cluster, atau NodePort/LoadBalancer untuk akses eksternal

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-db-service
  labels:
    app: postgres-db
spec:
  selector:
    app: contact-book-app # Selector ini harus menunjuk ke pod yang menjalankan PostgreSQL
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP # Database biasanya hanya diakses dari dalam cluster
